usando toList()