@@ -6,9 +6,6 @@ import app.car.cap08.domain.TravelRequest;
 import app.car.cap08.interfaces.incoming.PassengerAPI;
 import app.car.cap08.interfaces.incoming.input.TravelRequestInput;
 import app.car.cap08.interfaces.incoming.output.TravelRequestOutput;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.Link;
@@ -16,6 +13,8 @@ import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ResponseStatusException;
+
+import java.util.List;
 
 @Component
 public class TravelRequestMapper {
@@ -62,7 +61,7 @@ public class TravelRequestMapper {
     }
 
     public List<EntityModel<TravelRequestOutput>> buildOutputModel(List<TravelRequest> requests) {
-        return requests.stream().map(tr -> buildOutputModel(tr, map(tr))).collect(Collectors.toList());
+        return requests.stream().map(tr -> buildOutputModel(tr, map(tr))).toList();
     }
 
 }
